--- a/style.css
+++ b/style.css
@@ -75,6 +75,13 @@ body {
     font-size: 2.25rem;
 }
 
+.home.hero-bg {
+    width: 100%;
+    height: 15em;
+    background-size: cover;
+    background-position: center;
+}
+
 /*/////////////////////////////////////////////////////////////
                     ABOUT SELECTORS
 /////////////////////////////////////////////////////////////*/
